src/objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Consent_Registration_Date__c</fullName>
        <label>Consent Registration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Consent_Registration_IP_Address__c</fullName>
        <label>Consent Registration IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Registration_Source_URL__c</fullName>
        <label>Consent Registration Source URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Registration_Source_URLs__c</fullName>
        <label>Consent Registration Source URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consent_Status__c</fullName>
        <label>Consent Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Text_Version__c</fullName>
        <label>Consent Text Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Text__c</fullName>
        <label>Consent Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Texts__c</fullName>
        <label>Consent Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Events Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Opted_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Opted Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewsLetter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NewsLetter Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_in_Source__c</fullName>
        <label>Opt-in Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_in_URL__c</fullName>
        <label>Opt-in URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_out_URL__c</fullName>
        <label>Opt-out URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Policy_Version__c</fullName>
        <label>Privacy Policy Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promotions Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sixteen_Years_or_Older__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sixteen Years or Older</label>
        <type>Checkbox</type>
    </fields>
    <label>Subscription</label>
    <nameField>
        <displayFormat>SN{00000000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>